--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.16.2",
-    "@types/node": "^20.14.10",
-    "hono": "^4.4.13",
-    "prisma": "^5.16.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.3"
+    "hono": "^4.4.13"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "prisma": "^5.16.2"
   }
 }
