--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.16.2",
-    "hono": "^4.4.13"
+    "hono": "^4.4.13",
+    "prisma": "^5.16.2"
   },
   "devDependencies": {
-    "@types/bun": "latest",
-    "prisma": "^5.16.2"
+    "@types/bun": "latest"
   }
 }
