--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "db:seed": "prisma db seed"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.2.2",
     "@prisma/client": "^5.16.2",
     "hono": "^4.4.13",
-    "prisma": "^5.16.2"
+    "prisma": "^5.16.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bun": "latest"
