--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hono/zod-validator": "^0.2.2",
     "@prisma/client": "^5.16.2",
     "hono": "^4.4.13",
+    "oslo": "^1.2.1",
     "prisma": "^5.16.2",
     "zod": "^3.23.8"
   },
